# LightDance-ESP32

./: .gitignore
idf_project/: CMakeLists.txt  sdkconfig  sdkconfig.old
idf_project/components/LedDriver/: CMakeLists.txt
idf_project/components/LedDriver/inc/: LedDriver.hpp  channelhandle.hpp  config.h  led_def.h  pca9955.h  pca9955driver.hpp  ws2812.h  ws2812driver.hpp
idf_project/components/LedDriver/src/: LedDriver.cpp  channelhandle.cpp  pca9955.c  pca9955driver.cpp  ws2812.c  ws2812driver.cpp
idf_project/components/PatternTable/: CMakeLists.txt
idf_project/components/PatternTable/inc/: app_config.h  pattern_table.h  player.h  player_content.h  sdcard.h  state_changer.h  testing.h
idf_project/components/PatternTable/src/: pattern_table.c  player.c  player_content.c  sdcard.c  state_changer.c  testing.c
idf_project/main/: CMakeLists.txt  main.cpp
